Skill Category List Setup

--- a/WCSTrainer/Pages/Lessons/Details.cshtml
+++ b/WCSTrainer/Pages/Lessons/Details.cshtml
@@ -35,6 +35,9 @@
          <div class="user-form">
             <p class="title">Lesson #@Model.Lesson.Id</p>
             <div class="field-container">
+               <div class="title-row">
+                  <p class="title">Details</p>
+               </div>
                <div class="text-group">
                   <p class="title">Name</p>
                   <p class="info">@Model.Lesson.Name</p>
