--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -9,6 +9,9 @@
             <div id="contentToPrint" class="print-block">
                <p class="title">Skill #@Model.Skill.Id</p>
                <div class="field-container">
+                  <div class="title-row">
+                     <p class="title">Details</p>
+                  </div>
                   <div class="text-group">
                      <p class="title">Name</p>
                      <p class="info">@Model.Skill.Name</p>
