--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -27,10 +27,7 @@
                            <label asp-for="Lesson.Description" class="control-label"></label>
                            <span asp-validation-for="Lesson.Description" class="text-danger"></span>
                         </div>
-                        <textarea class="desc-resize" rows="5" asp-for="Lesson.Description" 
-                        placeholder="Describe the steps needed to complete this lesson.">
-
-                        </textarea>
+                        <textarea class="desc-resize" rows="5" asp-for="Lesson.Description" placeholder="Describe the steps needed to complete this lesson."></textarea>
                      </div>
                   </div>
                   <div class="form-group">
