--- a/WCSTrainer/Pages/Skills/Index.cshtml
+++ b/WCSTrainer/Pages/Skills/Index.cshtml
@@ -18,7 +18,20 @@
                   </select>
                </form>
             </div>
-            <partial name="_ListDisplay" model="Model.ListPartial" />
+            <ul class="category-container">
+               @foreach (var category in Model.CategoryList) {
+                  <li id="@category.Name @category.Id" class="category">
+                     <p class="category-title">@category.Name</p>
+                     <ul class="skill-list">
+                        @foreach (var skill in category.Skills) {
+                           <li id="@skill.Name @skill.Id" class="skill">
+                              <a asp-page="./Details" asp-route-id="@skill.Id">#@skill.Id - @skill.Name</a>
+                           </li>
+                        }
+                     </ul>
+                  </li>
+               }
+            </ul>
          </div>
          <script src="~/js/listdisplay.js"></script>
          <div class="tool-container">
@@ -29,10 +42,10 @@
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Skill</a>
+                  <a asp-page="CreateCategory" class="btn nbg-btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
       </div>
    </div>
 </div>
-
