Skill Delete Section

--- a/WCSTrainer/Pages/Skills/Delete.cshtml
+++ b/WCSTrainer/Pages/Skills/Delete.cshtml
@@ -6,15 +6,15 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
-            <p class="title">Skill #@Html.DisplayFor(model => model.Skill.Id)</p>
+            <p class="title">Skill #@Model.Skill.Id</p>
             <div class="field-container">
                <div class="text-group">
                   <p class="title">Name</p>
-                  <p class="info">@Html.DisplayFor(model => model.Skill.Name)</p>
+                  <p class="info">@Model.Skill.Name</p>
                </div>
                <div class="text-group">
                   <p class="title">Description</p>
-                  <p class="info">@Html.DisplayFor(model => model.Skill.Description)</p>
+                  <p class="info">@Model.Skill.Description</p>
                </div>
                <br />
                <form method="post" class="form-group">
