Skill Categories Complete

--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -24,7 +24,7 @@
                            <p class="control-label">Skill Category</p>
                            <span asp-validation-for="@Model.Skill.SkillCategoryId" class="text-danger"></span>
                         </div>
-                        <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategroySelectList"></select>
+                        <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategorySelectList"></select>
                      </div>
                   </div>
                   <div class="form-group">
