--- a/WCSTrainer/Pages/Lessons/Index.cshtml
+++ b/WCSTrainer/Pages/Lessons/Index.cshtml
@@ -15,7 +15,20 @@
                   </select>
                </form>
             </div>
-            <partial name="_ListDisplay" model="Model.ListPartial" />
+            <ul class="category-container">
+               @foreach (var category in Model.CategoryList) {
+                  <li id="@category.Name @category.Id" class="category">
+                     <p class="category-title">@category.Name</p>
+                     <ul class="skill-list">
+                        @foreach (var lesson in category.Lessons) {
+                           <li id="@lesson.Name @lesson.Id" class="skill">
+                              <a asp-page="./Details" asp-route-id="@lesson.Id">#@lesson.Id - @lesson.Name</a>
+                           </li>
+                        }
+                     </ul>
+                  </li>
+               }
+            </ul>
          </div>
          <script src="~/js/listdisplay.js"></script>
          <div class="tool-container">
@@ -26,6 +39,7 @@
                </div>
                <div class="btns">
                   <a asp-page="Create" class="btn nbg-btn btnMenu">Create Lesson</a>
+                  <a asp-page="CreateCategory" class="btn nbg-btn btnMenu">Create Category</a>
                </div>
             </div>
          </div>
