--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -19,6 +19,26 @@
                   </select>
                </div>
                <div class="right">
+                  <select id="sortBy" class="drop-main">
+                     <option value="All">All</option>
+                     <option value="High">High</option>
+                     <option value="Medium">Medium</option>
+                     <option value="Low">Low</option>
+                  </select>
+                  <select id="month" class="drop-main">
+                     <option value="January">January</option>
+                     <option value="February">February</option>
+                     <option value="March">March</option>
+                     <option value="April">April</option>
+                     <option value="May">May</option>
+                     <option value="June">June</option>
+                     <option value="July">July</option>
+                     <option value="August">August</option>
+                     <option value="September">September</option>
+                     <option value="October">October</option>
+                     <option value="November">November</option>
+                     <option value="December">December</option>
+                  </select>
                   <button class="btn btnWhite bg-btn" id="viewToggle">
                      Simple View
                   </button>
