--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -87,16 +87,12 @@ pre {
 }
 
 ::-webkit-datetime-edit-fields-wrapper {
-
-	
 }
 
 ::-webkit-datetime-edit-text {
-
 }
 
 ::-webkit-inner-spin-button {
-
 }
 
 ::-webkit-calendar-picker-indicator {
@@ -126,6 +122,49 @@ img {
 .dot {
 	cursor: pointer;
 }
+
+.pill-container {
+	display: flex;
+	flex-wrap: wrap;
+	background: var(--black);
+	padding: 3px;
+	padding-right: 10px;
+	border: 1px solid var(--gray5);
+	min-height: 25px;
+	min-width: 100px;
+	cursor: pointer;
+	border-radius: 5px;
+}
+
+	.pill-container:focus-within {
+		border-color: #007bff;
+	}
+
+.multi-select-wrapper {
+	position: relative;
+}
+
+.multi-select-comp {
+	position: absolute;
+	min-width: fit-content;
+	width: 100%;
+	margin-top: 5px;
+	background-color: var(--black);
+	z-index: 10;
+	color: var(--textMain);
+	border: 1px solid var(--gray5);
+	overflow: hidden;
+}
+
+	.multi-select-comp option {
+		padding: 5px;
+		padding-right: 20px;
+		user-select: none;
+	}
+
+		.multi-select-comp option:hover {
+			background-color: var(--gray4);
+		}
 
 @media print {
 	body * {
@@ -197,4 +236,3 @@ img {
 			font-size: 16px;
 		}
 }
-
