--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -9,7 +9,6 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="list-container">
-            <p class="title">Filters:</p>
             <div class="top">
                <div class="left">
                   <div class="select-cont">
@@ -22,7 +21,7 @@
                      </select>
                   </div>
                   <div class="multi-select-wrapper">
-                     <p class="label">Priority</p>
+                     <p class="label">Priorities</p>
                      <select multiple class="multi-select-comp" size="3">
                         <option value="High">High</option>
                         <option value="Medium">Medium</option>
