Added Delete Buttons

--- a/WCSTrainer/Pages/Lessons/Details.cshtml
+++ b/WCSTrainer/Pages/Lessons/Details.cshtml
@@ -2,6 +2,11 @@
 @model WCSTrainer.Pages.Lessons.DetailsModel
 @using System.Text.RegularExpressions
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
+
+
 @functions {
    public string ConvertContent(string content) {
       var urlRegex = new Regex(@"(http|https)://[^\s]+");
@@ -50,9 +55,18 @@
                </div>
             </div>
             <div class="btn-container">
-               <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Lesson.Id">
-                  Edit
-               </a>
+               <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Lesson.Id">Edit</a>
+					@if (SignInManager.IsSignedIn(User)) {
+						var user = await UserManager.GetUserAsync(User);
+						if (user != null)
+						{
+							var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+							if (isOwner)
+							{
+								<a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.Lesson.Id">Delete</a>
+							}
+						}
+					}
             </div>
          </div>
       </div>
