--- a/WCSTrainer/Pages/TrainerGroups/Details.cshtml
+++ b/WCSTrainer/Pages/TrainerGroups/Details.cshtml
@@ -1,6 +1,11 @@
 ﻿@page
 @model WCSTrainer.Pages.TrainerGroups.DetailsModel
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
+
+
 <div class="panel">
    <div class="body">
       <partial name="_Sidebar" />
@@ -26,6 +31,17 @@
             </div>
             <div class="btn-container">
                <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.TrainerGroup.Id">Edit</a>
+					@if (SignInManager.IsSignedIn(User)) {
+						var user = await UserManager.GetUserAsync(User);
+						if (user != null)
+						{
+							var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+							if (isOwner)
+							{
+								<a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.TrainerGroup.Id">Delete</a>
+							}
+						}
+					}
             </div>
          </div>
       </div>
