--- a/WCSTrainer/Pages/Locations/Details.cshtml
+++ b/WCSTrainer/Pages/Locations/Details.cshtml
@@ -23,19 +23,20 @@
             </div>
             <div class="btn-container">
                <a class="btn bg-btn btnGreen" asp-page="./Edit" asp-route-id="@Model.Location.Id">Edit</a>
-					@if (SignInManager.IsSignedIn(User)) {
-						var user = await UserManager.GetUserAsync(User);
-						if (user != null)
-						{
-							var isOwner = await UserManager.IsInRoleAsync(user, "owner");
-							if (isOwner)
-							{
-								<a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.Location.Id">Delete</a>
-							}
-						}
-					}
+               @if (SignInManager.IsSignedIn(User))
+               {
+                  var user = await UserManager.GetUserAsync(User);
+                  if (user != null)
+                  {
+                     var isOwner = await UserManager.IsInRoleAsync(user, "owner");
+                     if (isOwner)
+                     {
+                        <a class="btn bg-btn btnRed" asp-page="./Delete" asp-route-id="@Model.Location.Id">Delete</a>
+                     }
+                  }
+               }
+            </div>
          </div>
       </div>
    </div>
 </div>
-
