--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -11,7 +11,7 @@
             <div class="field-container">
                <form method="post">
                   <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                  <div class="form-group"> 
+                  <div class="form-group">
                      <div class="form">
                         <div class="labels">
                            <label asp-for="Skill.Name" class="control-label"></label>
@@ -19,30 +19,34 @@
                         </div>
                         <input asp-for="Skill.Name" class="form-control" />
                      </div>
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Skill Category</p>
-                           <span asp-validation-for="@Model.Skill.SkillCategoryId" class="text-danger"></span>
+                     @if (Model.CategorySelectList != null) {
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Skill Category</p>
+                              <span asp-validation-for="@Model.Skill.SkillCategoryId" class="text-danger"></span>
+                           </div>
+                           <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategorySelectList"></select>
                         </div>
-                        <select asp-for="@Model.Skill.SkillCategoryId" class="form-drop2" asp-items="@Model.CategorySelectList"></select>
-                     </div>
+                     }
                   </div>
-                  <div class="form-group">
-                     <div class="form">
-                        <div class="labels">
-                           <p class="control-label">Lesson</p>
-                           <span asp-validation-for="@Model.SelectedLessonList" class="text-danger"></span>
+                  @if (Model.LessonSelectList != null) {
+                     <div class="form-group">
+                        <div class="form">
+                           <div class="labels">
+                              <p class="control-label">Lesson</p>
+                              <span asp-validation-for="@Model.SelectedLessonList" class="text-danger"></span>
+                           </div>
+                           <select asp-for="@Model.SelectedLessonList" multiple class="multi-select" asp-items="@Model.LessonSelectList"></select>
                         </div>
-                        <select asp-for="@Model.SelectedLessonList" multiple class="multi-select" asp-items="@Model.LessonSelectList"></select>
                      </div>
-                  </div>
+                  }
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
                            <label asp-for="Skill.Description" class="control-label"></label>
                            <span asp-validation-for="Skill.Description" class="text-danger"></span>
                         </div>
-                        <textarea asp-for="Skill.Description" class="form-control" ></textarea>
+                        <textarea asp-for="Skill.Description" class="form-control"></textarea>
                      </div>
                   </div>
                   <div class="form-group">
