--- a/WCSTrainer/Pages/Skills/Edit.cshtml
+++ b/WCSTrainer/Pages/Skills/Edit.cshtml
@@ -39,6 +39,9 @@
                   <div class="form-group">
                      <input type="submit" value="Save" class="btn bg-btn btnGreen" />
                   </div>
+
+                  <div class="form-group">
+                  </div>
                </form>
             </div>
          </div>
