--- a/WCSTrainer/Pages/Lessons/Delete.cshtml
+++ b/WCSTrainer/Pages/Lessons/Delete.cshtml
@@ -14,7 +14,7 @@
                </div>
                <div class="text-group">
                   <p class="title">Description</p>
-                  <pre class="info">@Model.Lesson.Description.Content</pre>
+                  <pre class="info">@Model.Lesson.Descriptions</pre>
                </div>
                <br />
                <form method="post" class="form-group">
