--- a/WCSTrainer/Pages/Lessons/Edit.cshtml
+++ b/WCSTrainer/Pages/Lessons/Edit.cshtml
@@ -30,10 +30,10 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <label asp-for="Lesson.Description" class="control-label"></label>
-                           <span asp-validation-for="Lesson.Description" class="text-danger"></span>
+                           <label asp-for="Lesson.Descriptions" class="control-label"></label>
+                           <span asp-validation-for="Lesson.Descriptions" class="text-danger"></span>
                         </div>
-                        <textarea class="desc-resize" rows="5" asp-for="Lesson.Description" placeholder="Describe the steps needed to complete this lesson."></textarea>
+                        <textarea class="desc-resize" rows="5" asp-for="Lesson.Descriptions" placeholder="Describe the steps needed to complete this lesson."></textarea>
                      </div>
                   </div>
                   <div class="form-group">
